--- a/Proyecto-Web-Front/src/main/resources/application.properties
+++ b/Proyecto-Web-Front/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=Proyecto-web-front
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 logging.level.org.springframework.web=DEBUG
+spring.web.resources.static-locations=classpath:/static/
+spring.mvc.static-path-pattern=/assets/**
