--- a/Proyecto-Web-Front/src/main/resources/application.properties
+++ b/Proyecto-Web-Front/src/main/resources/application.properties
@@ -1,6 +1,24 @@
-spring.application.name=Proyecto-web-front
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
-logging.level.org.springframework.web=DEBUG
-spring.web.resources.static-locations=classpath:/static/
-spring.mvc.static-path-pattern=/assets/**
+spring.application.name=FrontWeb
+server.port=3030
+
+# Ajustes JSF
+# Indicamos si el proyecto esta en modo desarrollo o produccion (development/production)
+joinfaces.faces.project-stage=development
+# Establece el nombre del servlet que manejará las peticiones
+joinfaces.faces-servlet.name=FacesServlet
+# Esta propiedad define los patrones de URL o las extensiones a leerse
+joinfaces.faces-servlet.url-mappings=*.jsf,*.xhtml
+# Define el estado de los datos en la vista si en "server" o "client".
+joinfaces.faces.state-saving-method=client
+# Valida los campos nulos en true de los formularios
+joinfaces.faces.validate-empty-fields=true
+
+## Ajustes PrimeFaces
+# Tema (por default es el tema de saga, tema oscuro es vela)
+joinfaces.primefaces.theme=saga
+
+## Ajustes OmniFaces
+# Indica que leera todas las rutas de las vistas para ejecutarlas sin la extension .xhtml o cualquier otra utilizadas
+joinfaces.omnifaces.faces-views-scan-paths=/
+# Activa siempre el escaneo
+joinfaces.omnifaces.faces-views-scanned-views-always-extensionless=true
